# RAI

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: keepalive.yml
bridge/: index.js  package-lock.json  package.json
scripts/: generate_pdf.py  simulate_research.sh  simulate_telegram.sh  start.sh
src/: config.rs  main.rs  models.rs  routes.rs  services.rs
